이거 시연할떄 들어간 이미지 파일 무시하는거야 진짜 아무것도 아냐

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ build/
 src/main/webapp/upload/t_1.jpg
 src/main/webapp/h_upload/구름.jpg
 src/main/webapp/n_upload/express 처리흐름.png
+src/main/webapp/n_upload/고양이.jpeg
+src/main/webapp/upload/KakaoTalk_20220805_180158389.png
+src/main/webapp/upload/구름_1.jpg
