[update] 관리자 게시판 사진 여러장 wirte, delete

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,15 @@ src/main/webapp/n_upload/express 처리흐름.png
 src/main/webapp/n_upload/고양이.jpeg
 src/main/webapp/upload/KakaoTalk_20220805_180158389.png
 src/main/webapp/upload/구름_1.jpg
+src/main/webapp/upload/가을.jpg
+src/main/webapp/upload/가을_1.jpg
+src/main/webapp/upload/가을_2.jpg
+src/main/webapp/upload/고양이_1.jpeg
+src/main/webapp/upload/고양이_2.jpeg
+src/main/webapp/upload/고양이_3.jpeg
+src/main/webapp/upload/고양이_4.jpeg
+src/main/webapp/upload/구름_2.jpg
+src/main/webapp/upload/뉴욕 노을.jpg
+src/main/webapp/upload/이쁜 파도.png
+src/main/webapp/upload/이쁜 파도_1.png
+src/main/webapp/upload/제주도 시골길.jpeg
