[update] 혼캠 게시판 수정 진행중

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,18 @@ src/main/webapp/upload/뉴욕 노을.jpg
 src/main/webapp/upload/이쁜 파도.png
 src/main/webapp/upload/이쁜 파도_1.png
 src/main/webapp/upload/제주도 시골길.jpeg
+뉴욕 노을.jpg
+src/main/webapp/h_upload/image.jpg
+src/main/webapp/h_upload/고양이.jpeg
+src/main/webapp/h_upload/뉴욕 노을_1.jpg
+src/main/webapp/h_upload/뉴욕 노을_2.jpg
+src/main/webapp/h_upload/뉴욕 노을_3.jpg
+src/main/webapp/h_upload/뉴욕 노을_4.jpg
+src/main/webapp/h_upload/뉴욕 노을_5.jpg
+src/main/webapp/h_upload/뉴욕 노을_6.jpg
+src/main/webapp/h_upload/제주도 시골길.jpeg
+src/main/webapp/h_upload/제주도 시골길_1.jpeg
+src/main/webapp/n_upload/뉴욕 노을_2.jpg
+src/main/webapp/upload/고양이_5.jpeg
+src/main/webapp/upload/뉴욕 노을_1.jpg
+src/main/webapp/upload/이쁜 파도_2.png
