[update] admin, mboard 부분 주석처리 지움

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ src/main/webapp/n_upload/뉴욕 노을_2.jpg
 src/main/webapp/upload/고양이_5.jpeg
 src/main/webapp/upload/뉴욕 노을_1.jpg
 src/main/webapp/upload/이쁜 파도_2.png
+image.jpg
+가을.jpg
+구름.jpg
+토이스토리.jpg
+src/main/webapp/h_upload/KakaoTalk_20220805_180158389.png
+src/main/webapp/upload/해외 시골길.jpg
